--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">MIS571GroupProject</string>
+    <string name="app_name">MIS 571 Group Project</string>
+    <string name="action_settings">Settings</string>
+    <string name="welcome">Welcome</string>
+    <string name="goCheckOut_btn">Check Out</string>
+    <string name="goDoQuery_btn">Do Query</string>
+    <string name="title_query">Query</string>
+    <string name="showresult_btn">Show Result</string>
+    <string name="goback">Back to Main Page</string>
+    <string name="showresult">Show Result</string>
+    <string name="query_prompt">Choose a query</string>
 </resources>
